chore: `cSpell.words`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "cSpell.words": [
-        "NEOS"
+        "Autoinclude",
+        "autoload",
+        "esbuild",
+        "formulahendry",
+        "fqcn",
+        "IntelliJ",
+        "Neos",
+        "networkteam",
+        "outfile",
+        "proptypes",
+        "sjsone"
     ]
 }
