--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "engines": {
         "node": "*"
     },
+    "bin": "out/main.js",
     "dependencies": {
         "fast-xml-parser": "^4.2.4",
         "ts-fusion-parser": "^0.2.2",
@@ -19,9 +20,10 @@
         "yaml": "^2.3.4"
     },
     "scripts": {
-        "build:base": "esbuild ./src/main.ts --bundle --outfile=out/main.js --format=cjs --platform=node --keep-names",
-        "build:minify": "yarn run build:base --minify",
-        "build:no-minify": "yarn run build:base --sourcemap",
-        "watch": "yarn run build:base --sourcemap --watch"
+        "prepublishOnly": "rm -rf out/main.js && yarn run esbuild",
+        "esbuild-base": "esbuild ./src/main.ts --bundle --outfile=out/main.js --format=cjs --platform=node --keep-names",
+        "esbuild": "yarn run esbuild-base --minify",
+        "esbuild-without-minify": "yarn run esbuild-base --sourcemap",
+        "esbuild-watch": "yarn run esbuild-base --sourcemap --watch"
     }
 }
