--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "yaml": "^2.2.1"
     },
     "scripts": {
-        "prepublishOnly": "rm -rf out/main.js && yarn run esbuild",
-        "esbuild-base": "esbuild ./src/main.ts --bundle --outfile=out/main.js --format=cjs --platform=node --keep-names",
-        "esbuild": "yarn run esbuild-base --minify",
-        "esbuild-without-minify": "yarn run esbuild-base --sourcemap",
-        "esbuild-watch": "yarn run esbuild-base --sourcemap --watch"
+        "prepublishOnly": "rm -rf out/main.js && yarn run build:minify",
+        "build:base": "esbuild ./src/main.ts --bundle --outfile=out/main.js --format=cjs --platform=node --keep-names",
+        "build:minify": "yarn run build:base --minify",
+        "build:no-minify": "yarn run build:base --sourcemap",
+        "watch": "yarn run build:base --sourcemap --watch"
     }
 }
