chore: prepared for NPM publishing

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
         "yaml": "^2.2.1"
     },
     "scripts": {
-        "prepublishOnly": "rm -rf out/main.js && yarn run build:minify",
+        "prepublishOnly": "rm -rf out/main.js && yarn run build:release",
         "build:base": "esbuild ./src/main.ts --bundle --outfile=out/main.js --format=cjs --platform=node --keep-names",
+        "build:release": "yarn run build:minify",
         "build:minify": "yarn run build:base --minify",
         "build:no-minify": "yarn run build:base --sourcemap",
         "watch": "yarn run build:base --sourcemap --watch"
